chore: possible fix for images not loading

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
     <ngb-carousel [pauseOnHover]="true" [interval]="5000">
       <ng-template ngbSlide>
         <div>
-          <img src="../assets/images/carousel/ribbon_cutting.jpeg" alt="Ribbon Cutting Ceremony">
+          <img src="assets/images/carousel/ribbon_cutting.jpeg" alt="Ribbon Cutting Ceremony">
         </div>
         <div class="carousel-caption">
           <h3>Ribbon Cutting Ceremony</h3>
@@ -26,7 +26,7 @@
       </ng-template>
       <ng-template ngbSlide>
         <div>
-          <img src="../assets/images/carousel/front_of_center.jpeg" alt="Front of H.O.P.E. Center">
+          <img src="assets/images/carousel/front_of_center.jpeg" alt="Front of H.O.P.E. Center">
         </div>
         <div class="carousel-caption">
           <h3>Front View of the H.O.P.E. Center</h3>
@@ -35,7 +35,7 @@
       </ng-template>
       <ng-template ngbSlide>
         <div>
-          <img src="../assets/images/carousel/he_will_be_like_a_tree.jpeg" alt="Interior Mural">
+          <img src="assets/images/carousel/he_will_be_like_a_tree.jpeg" alt="Interior Mural">
         </div>
         <div class="carousel-caption">
           <h3>Interior Mural</h3>
@@ -66,7 +66,7 @@
       </div>
     </div>
     <div class="col-lg-6 order-lg-2">
-      <div class="p-5"><img class="img-fluid rounded-circle" src="../assets/images/about/tree_frog.jpeg" alt="Mural of a Tree Frog"></div>
+      <div class="p-5"><img class="img-fluid rounded-circle" src="assets/images/about/tree_frog.jpeg" alt="Mural of a Tree Frog"></div>
     </div>
   </div>
 
@@ -81,7 +81,7 @@
       </div>
     </div>
     <div class="col-lg-6 order-lg-1">
-      <div class="p-5"><img class="img-fluid rounded-circle " src="../assets/images/about/mafredi.jpeg" alt="Picture of the Church and School in Mafredi"></div>
+      <div class="p-5"><img class="img-fluid rounded-circle " src="assets/images/about/mafredi.jpeg" alt="Picture of the Church and School in Mafredi"></div>
     </div>
   </div>
 
@@ -108,7 +108,7 @@
         </div>
       </div>
       <div class="col-lg-6 order-lg-2">
-        <div class="p-5"><img class="img-fluid rounded-circle" src="../assets/images/contact/osborne_family.jpeg" alt="Picture of the Osborne Family"></div>
+        <div class="p-5"><img class="img-fluid rounded-circle" src="assets/images/contact/osborne_family.jpeg" alt="Picture of the Osborne Family"></div>
       </div>
     </div>
 
