chore: comment out carousel captions temporarily

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,29 +18,29 @@
         <div>
           <img src="assets/images/carousel/ribbon_cutting.jpeg" alt="Ribbon Cutting Ceremony">
         </div>
-        <div class="carousel-caption">
-          <h3>Ribbon Cutting Ceremony</h3>
-          <p>Late H.O.P.E. Missions Ministries president Mitchell Osborne (middle) is pictured with vice president Billy Parrott (left) and Mafredi village leader
-            and friend Gerry Parham (right). This ribbon cutting ceremony marked the official beginning of the H.O.P.E. Center being active in Mafredi.</p>
-        </div>
+<!--        <div class="carousel-caption">-->
+<!--          <h3>Ribbon Cutting Ceremony</h3>-->
+<!--          <p>Late H.O.P.E. Missions Ministries president Mitchell Osborne (middle) is pictured with vice president Billy Parrott (left) and Mafredi village leader-->
+<!--            and friend Gerry Parham (right). This ribbon cutting ceremony marked the official beginning of the H.O.P.E. Center being active in Mafredi.</p>-->
+<!--        </div>-->
       </ng-template>
       <ng-template ngbSlide>
         <div>
           <img src="assets/images/carousel/front_of_center.jpeg" alt="Front of H.O.P.E. Center">
         </div>
-        <div class="carousel-caption">
-          <h3>Front View of the H.O.P.E. Center</h3>
-          <p>This cute tree frog welcomes all visitors to the H.O.P.E. Center as the first thing they see on the wall pulling in.</p>
-        </div>
+<!--        <div class="carousel-caption">-->
+<!--          <h3>Front View of the H.O.P.E. Center</h3>-->
+<!--          <p>This cute tree frog welcomes all visitors to the H.O.P.E. Center as the first thing they see on the wall pulling in.</p>-->
+<!--        </div>-->
       </ng-template>
       <ng-template ngbSlide>
         <div>
           <img src="assets/images/carousel/he_will_be_like_a_tree.jpeg" alt="Interior Mural">
         </div>
-        <div class="carousel-caption">
-          <h3>Interior Mural</h3>
-          <p>A mural painted on one of the interior walls.</p>
-        </div>
+<!--        <div class="carousel-caption">-->
+<!--          <h3>Interior Mural</h3>-->
+<!--          <p>A mural painted on one of the interior walls.</p>-->
+<!--        </div>-->
       </ng-template>
     </ngb-carousel>
   </div>
